# CS4990-Generative-AI

./: .gitignore  README.md  TestGenerateToken.py  TestTraining.py  pyproject.toml  run_all.sh
VAE/: TestGenerateToken.py  TestTraining.py  TransformMIDI.py
WGAN/: wgan.py
vanillaGAN/: vanillaGAN.py
